--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1095,7 +1095,7 @@ main {
     }
   }
   .companies {
-    padding: 40px 0;
+    padding: 60px 0;
     .companies_grid {
       gap: 12px;
       display: flex;
@@ -1103,24 +1103,32 @@ main {
       &::-webkit-scrollbar {
         display: none;
       }
-      .company_card {
-        background: $inputBg;
-        padding: 16px 24px;
-        @include centerFlex();
-        min-width: 206px;
-        max-width: 206px;
-        gap: 12px;
-        border-radius: 12px;
-        flex-direction: column;
-        .img {
-          img {
-            height: 70px;
-          }
+    }
+    .company_card {
+      background: $inputBg;
+      padding: 16px 24px;
+      @include centerFlex();
+      min-width: 206px;
+      max-width: 206px;
+      gap: 12px;
+      border-radius: 12px;
+      flex-direction: column;
+      .img {
+        img {
+          height: 70px;
         }
-        h6{
-          color: $dark;
-          font-weight: 600;
-          margin: 0;
+      }
+      h6 {
+        color: $dark;
+        font-weight: 600;
+        margin: 0;
+      }
+      &.company {
+        width: 100%;
+        min-width: auto !important;
+        max-width: auto !important;
+        img {
+          height: 54px !important;
         }
       }
     }
@@ -1316,5 +1324,121 @@ input[type="radio"] {
   i {
     color: #ffd500;
     font-size: 12px;
+  }
+}
+.explore_inCompany {
+  padding-top: 20px !important;
+}
+.company_profile {
+  padding-top: 60px;
+  .profile_card {
+    padding: 8px;
+    border-radius: 8px;
+    background: $inputBg;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    .img {
+      height: 104px;
+      width: 104px;
+      padding: 12px;
+      border-radius: 8px;
+      background: $white;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+    .content {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      height: 104px;
+      h6 {
+        margin: 0;
+      }
+      p {
+        margin: 0;
+        img {
+          height: 16px;
+        }
+      }
+      .call {
+        display: flex;
+        gap: 12px;
+        a {
+          gap: 6px;
+          background: #bde0fc;
+          border-radius: 8px;
+          padding: 4px 16px;
+          color: $dark;
+          font-weight: 500;
+          &:last-child {
+            background: #c4e7c0;
+          }
+          &:hover {
+            color: $dark;
+          }
+        }
+      }
+    }
+  }
+  .bio_card {
+    padding: 16px;
+    border-radius: 8px;
+    background: $inputBg;
+    p {
+      line-height: 24px;
+      margin: 0;
+    }
+  }
+}
+.create_resume {
+  padding-top: 60px;
+  .wrapper {
+    position: relative;
+    width: 100%;
+    height: 140px;
+    overflow: hidden;
+    padding: 10px 20px;
+    border-radius: 12px;
+    display: flex;
+    background: radial-gradient(
+      60.11% 241.83% at 90.6% 28.57%,
+      rgba(0, 150, 64, 0.35) 0%,
+      #009640 100%
+    );
+    .content {
+      height: 100%;
+      width: 100%;
+      @include space-between();
+      h1 {
+        margin: 0;
+        font-size: 32px;
+        color: $white;
+      }
+      p {
+        margin: 0;
+        font-size: 16px;
+        color: $white;
+      }
+      .avatar {
+        height: 100%;
+        width: 140px;
+        img {
+          height: 100%;
+        }
+      }
+    }
+    .thumb {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 140px;
+      height: 100px;
+      background-size: cover;
+      background-image: url(../images/thumb.png);
+    }
   }
 }
